<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etCourseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/etCourseDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_duration"
        android:inputType="text" />

    <EditText
        android:id="@+id/etCourseTracks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_tracks"
        android:inputType="text" />

    <EditText
        android:id="@+id/etCourseDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_description"
        android:inputType="text" />
</LinearLayout>
